Added some color to gui, added import function

--- a/MbanqClients.csproj
+++ b/MbanqClients.csproj
@@ -41,6 +41,7 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
@@ -65,10 +66,12 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Commands\DeleteClientCmd.cs" />
+    <Compile Include="Commands\ImportClientsCmd.cs" />
     <Compile Include="Commands\OpenAddClientViewCmd.cs" />
     <Compile Include="Commands\OpenUpdateClientViewCmd.cs" />
     <Compile Include="Commands\SaveNewClientCmd.cs" />
     <Compile Include="Commands\SaveUpdateClientCmd.cs" />
+    <Compile Include="Helpers\ImportFileParser.cs" />
     <Compile Include="Menu\NavigationMenu.cs" />
     <Compile Include="Models\ClientDetails.Context.cs">
       <AutoGen>True</AutoGen>
