Added CanExecute logic for update and delete buttons

--- a/MbanqClients.csproj
+++ b/MbanqClients.csproj
@@ -160,6 +160,7 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Resources\Data.csv" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
