Added db creation script

--- a/MbanqClients.csproj
+++ b/MbanqClients.csproj
@@ -176,6 +176,7 @@
       <DependentUpon>ClientDetails.edmx</DependentUpon>
       <LastGenOutput>ClientDetails.cs</LastGenOutput>
     </Content>
+    <Resource Include="Resources\DbCreationScript.txt" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
