--- a/App.config
+++ b/App.config
@@ -8,7 +8,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
   </startup>
   <connectionStrings>
-    <add name="MbanqEntities" connectionString="metadata=res://*/Models.ClientDetails.csdl|res://*/Models.ClientDetails.ssdl|res://*/Models.ClientDetails.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VMW-W2K16-ORA18;initial catalog=Mbanq;persist security info=True;user id=sa;password=Automation%1969;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="MbanqEntities" connectionString="metadata=res://*/Models.ClientDetails.csdl|res://*/Models.ClientDetails.ssdl|res://*/Models.ClientDetails.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=VMW-W2K16-ORA18;initial catalog=Mbanq;persist security info=True;user id=sa;password=*********;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
